# chat_laboratorio

./: CMakeLists.txt  Chat.cpp  Chat.h  Message.h  Notifier.cpp  Notifier.h  Observer.h  Subject.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  ChatTest.cpp  NotifierTest.cpp  UserTest.cpp  runAllTests.cpp
